creating Post models

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-MONGO_URL = mongodb+srv://austiniqer:SSWIBdYQznDwtdbj@cluster0.hqlbq.mongodb.net/social?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://austiniqer:SSWIBdYQznDwtdbj@cluster0.hqlbq.mongodb.net/social
+PORT = 8000
